--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
 <html>
 <head>
 <style>
-/* Игорь, сюды делай дизайн свой */
+@import url("https://fonts.googleapis.com/css?family=Raleway");
+@import url("https://fonts.googleapis.com/css?family=Comfortaa");
+body {
+background: black;
+} 
+a {
+color: rgb(0,255,0);
+font-family: 'Raleway' 'Comfortaa', sans-serif;
+font-size: 30px;
+}
+button {
+background: #ff0000;
+border:1px solid yellow;
+border-radius:30px;
+}
 </style>
 <title>IltiOS - выбор версии</title>
 </head>
