--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa");
 body {
 background: black;
+  color:white;
 } 
 a {
 color: rgb(0,255,0);
@@ -23,7 +24,7 @@ border-radius:30px;
 <body>
 <p>Версия 0.0.1</p>
 <button>
-<a href="(мой будущий адрес)/v001.html">0.0.1</a>
+<a href="v001.html">0.0.1</a>
 </button>
 </body>
 </html>
