--- a/v001.html
+++ b/v001.html
@@ -29,7 +29,7 @@ a.innerHTML = a + "<br>Letter and number test";
 setTimeout(launchE(), 5000);
 }
 function launchE(){
-a.innerHTML = a + "<br>! @ # $ % ^ & * ( ) + " № ; : ? , / - { } \ | . < >";
+a.innerHTML = a + "<br>\! \@ \# \$ \% \^ \& \* \( \) \+ \" \№ \; \: \? \, \/ \- \{ \} \| \. \< \>";
 setTimeout(launchF(), 5000);
 }
 function launchF(){
