--- a/v001.html
+++ b/v001.html
@@ -106,7 +106,7 @@ a.innerHTML = screenData + "<br>0.0.1" + e;
 updateCommandValue();
 }
 function workC(){
-setTimeout(workB(), 5000);
+setTimeOut(workB(), 5000);
 }
 </script>
 </body>
