--- a/v001.html
+++ b/v001.html
@@ -122,7 +122,7 @@ function workC(){
 setTimeout(workB, 5000);
 }
 function jfg(){
-screenData = a.innerHTML.value;
+screenData = a.innerHTML;
 }
 </script>
 </body>
