--- a/v001.html
+++ b/v001.html
@@ -48,7 +48,7 @@ a.innerHTML = screenData + "<br>A B C D E F G H I J K L M N O P Q R S T U V W X 
 setTimeout(launchG, 7000);
 }
 function launchG(){
-a.innerHTML = screenDara + "<br>А Б В Г Д Е Ё Ж З И Й К Л М Н О П Р С Т У Ф Х Ц Ч Ш Щ Ъ Ы Ь Э Ю Я";
+a.innerHTML = screenData + "<br>А Б В Г Д Е Ё Ж З И Й К Л М Н О П Р С Т У Ф Х Ц Ч Ш Щ Ъ Ы Ь Э Ю Я";
   jfg()
 setTimeout(launchH, 5000);
 }
