--- a/v002.html
+++ b/v002.html
@@ -14,7 +14,7 @@ color: green;
   <script>
 var a = document.getElementById("text"); //Берем тот <p> в переменную а
 var b, c, d, e, screenData, colorText, colorBackground;//Делаем переменную b, c, d, e, screenData, colorText и colorBackground без  значения
-var body = document.getElementByTag("body");
+var body = document.getElementsByTagName("body");
     screenData = null;
     colorText = "green";
     colorBackground = "black";
