--- a/v002.html
+++ b/v002.html
@@ -88,6 +88,8 @@ setTimeout(workA, 1000);
 function workA(){
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
   a.innerHTML = e;
+  colorBackground = "black";
+  colorText = "green";
 b = document.getElementById("txtcmnd")
 c = document.getElementById("run")
 b.style.background = colorBackground;
