--- a/v002.html
+++ b/v002.html
@@ -14,10 +14,10 @@ color: green;
   <script>
 var a = document.getElementById("text"); //Берем тот <p> в переменную а
 var b, c, d, e, screenData, colorText, colorBackground;//Делаем переменную b, c, d, e, screenData, colorText и colorBackground без  значения
-var body = document.getElementsByTagName("body");
     screenData = null;
     colorText = "green";
     colorBackground = "black";
+var body = document.getElementsByTagName("body")[0];
 setTimeout(launchA, 8000); // Дадим прогрузиться за 8 секунд, а после запускаем launchA
 function launchA(){ //Вот сам launchA
 a.innerHTML = " "; //Указываем пустоту в переменную a
