--- a/v002.html
+++ b/v002.html
@@ -215,6 +215,68 @@ else if(d == "color 02"){
 else if(d == "color 03"){
   colorText = "lime";
   colorBackground = "green";
+  cs()
+}
+else if(d == "color 10"){
+  colorText = "green";
+  colorBackground = "black";
+  cs()
+}
+else if(d == "color 11"){
+  colorText = "black";
+  colorBackground = "black";
+  cs()
+}
+  else if(d == "color 12"){
+  colorText = "white";
+  colorBackground = "black";
+  cs()
+}
+  else if(d == "color 13"){
+  colorText = "lime";
+  colorBackground = "black";
+  cs()
+}
+  else if(d == "color 20"){
+  colorText = "green";
+  colorBackground = "white";
+  cs()
+}
+else if(d == "color 21"){
+  colorText = "black";
+  colorBackground = "white";
+  cs()
+}
+  else if(d == "color 22"){
+  colorText = "white";
+  colorBackground = "white";
+  cs()
+}
+  else if(d == "color 23"){
+  colorText = "lime";
+  colorBackground = "white";
+  cs()
+}
+  else if(d == "color 30"){
+  colorText = "green";
+  colorBackground = "lime";
+  cs()
+}
+  else if(d == "color 31"){
+  colorText = "black";
+  colorBackground = "lime";
+  cs()
+}
+  else if(d == "color 32"){
+  colorText = "green";
+  colorBackground = "lime";
+  cs()
+}
+  else if(d == "color 33"){
+  colorText = "lime";
+  colorBackground = "lime";
+  cs()
+}
 }
 else {
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
