--- a/v002.html
+++ b/v002.html
@@ -18,6 +18,7 @@ var b, c, d, e, screenData, colorText, colorBackground;//Делаем перем
     colorText = "green";
     colorBackground = "black";
 var body = document.getElementsByTagName("body")[0];
+    var chat, jl, jhg, jgh = false;
 setTimeout(launchA, 8000); // Дадим прогрузиться за 8 секунд, а после запускаем launchA
 function launchA(){ //Вот сам launchA
 a.innerHTML = " "; //Указываем пустоту в переменную a
@@ -86,8 +87,10 @@ a.innerHTML = "";
 setTimeout(workA, 1000);
 }
 function workA(){
+  chat = "<br><br>Чат<br>";
+  jl = "<button onclick=\"jlgOpen()\"><p id=\"jlg\"></p>"
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
-  a.innerHTML = e;
+  a.innerHTML = e + chat;
   colorBackground = "black";
   colorText = "green";
 b = document.getElementById("txtcmnd")
@@ -98,6 +101,7 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
+  chat.style.color = colorText;
 d = b.value;
 updateCommandValue();
 }
@@ -108,7 +112,7 @@ function workB(){
 updateCommandValue();
 if(d == "help"){
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
-a.innerHTML = screenData + "<br>off - выключение компьютера, cs - очистка экрана, ver - посмотреть версию, help - посмотреть все команды, fm - посмотреть все файлы, color (цвет) - поменять цвет и color help для помощи для color.<br>" + e;
+a.innerHTML = screenData + "<br>off - выключение компьютера, cs - очистка экрана, ver - посмотреть версию, help - посмотреть все команды, fm - посмотреть все файлы, color (цвет) - поменять цвет и color help для помощи для color.<br>" + e + chat;
 b = document.getElementById("txtcmnd")
 c = document.getElementById("run")
 b.style.background = colorBackground;
@@ -117,10 +121,11 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
+  chat.style.color = colorText;
 screenData = screenData + "<br>off - выключение компьютера, cs - очистка экрана, ver - посмотреть версию, help - посмотреть все команды, fm - посмотреть все файлы, color (цвет) - поменять цвет и color help для помощи для color.<br>";
 }
 else if(d == "off"){
-b, c, d, e, screenData = " ";
+b, c, d, e, screenData + chat = " ";
 a.innerHTML = "Перезагрузите страницу для включения компьютера";
 a = " ";
 }
@@ -129,7 +134,7 @@ cs()
 }
 else if(d == "ver"){
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
-a.innerHTML = screenData + "<br>0.0.1<br>" + e;
+a.innerHTML = screenData + "<br>0.0.1<br>" + e + chat;
   b = document.getElementById("txtcmnd")
 c = document.getElementById("run")
 b.style.background = colorBackground;
@@ -142,7 +147,7 @@ body.style.color = colorText;
 }
 else if(d == "fm"){
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
-a.innerHTML = screenData + "<br>Папки:<br>ASSEMBLY<br>system<br><br>Используйте fm (папка) чтобы посмотреть внутрь папки<br>" + e;
+a.innerHTML = screenData + "<br>Папки:<br>ASSEMBLY<br>system<br><br>Используйте fm (папка) чтобы посмотреть внутрь папки<br>" + e + chat;
   b = document.getElementById("txtcmnd")
 c = document.getElementById("run")
 b.style.background = colorBackground;
@@ -155,7 +160,7 @@ body.style.color = colorText;
 }
 else if(d == "fm ASSEMBLY"){
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
-a.innerHTML = screenData + "<br>ASSEMBLY:<br>asm.sysf<br>" + e;
+a.innerHTML = screenData + "<br>ASSEMBLY:<br>asm.sysf<br>" + e + chat;
   b = document.getElementById("txtcmnd")
 c = document.getElementById("run")
 b.style.background = colorBackground;
@@ -164,11 +169,11 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
-  screenData = screenData + "<br>ASSEMBLY:<br>asm.sysf<br>" + e;
+  screenData = screenData + "<br>ASSEMBLY:<br>asm.sysf<br>";
 }
 else if(d == "fm system"){
    e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
-a.innerHTML = screenData + "<br>system:<br>launch.excf<br>boot.excf<br>command.cmd<br>saveScreenData.excf<br>system.asm<br>" + e;
+a.innerHTML = screenData + "<br>system:<br>launch.excf<br>boot.excf<br>command.cmd<br>saveScreenData.excf<br>system.asm<br>" + e + chat;
   b = document.getElementById("txtcmnd")
 c = document.getElementById("run")
 b.style.background = colorBackground;
@@ -181,7 +186,7 @@ body.style.color = colorText;
 }
 else if(d == "color help"){
 e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
-a.innerHTML = screenData + "<br>default - как обычно, 0 - зеленый, 1 - черный, 2 - белый, 3 - лаймовый. Укажите color (цвет фона)(цвет текста), например color 10 для зеленого текста на черном фоне<br>" + e;
+a.innerHTML = screenData + "<br>default - как обычно, 0 - зеленый, 1 - черный, 2 - белый, 3 - лаймовый. Укажите color (цвет фона)(цвет текста), например color 10 для зеленого текста на черном фоне<br>" + e + chat;
   b = document.getElementById("txtcmnd")
 c = document.getElementById("run")
 b.style.background = colorBackground;
@@ -280,7 +285,7 @@ else if(d == "color 21"){
 }
 else {
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
-a.innerHTML = screenData + "<br>Извините, была указана неверная команда или неверный атрибут<br>" + e;
+a.innerHTML = screenData + "<br>Извините, была указана неверная команда или неверный атрибут<br>" + e + chat;
   b = document.getElementById("txtcmnd")
 c = document.getElementById("run")
 b.style.background = colorBackground;
@@ -302,7 +307,7 @@ screenData = a.innerHTML;
     function cs(){
       screenData = " ";
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
-a.innerHTML = e;
+a.innerHTML = e + chat;
   b = document.getElementById("txtcmnd")
 c = document.getElementById("run")
 b.style.background = colorBackground;
@@ -311,6 +316,17 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
+    }
+    function jlgOpen(){
+      jhg = document.getElementById("jlg");
+      if(jgh == false){
+        jlg.innerHTML = "Чтобы зарегистироваться напишите на почту pwaramef@mail.ru письмо с \"Логин: (ваш логин) Пароль: (ваш пароль)\", а для написания/удаления письма в чате напишите на почту pwaramef@mail.ru письмо с нужным письмом в чат";
+        jgh = true;
+      }
+      if(jgh == true){
+        jlg.innerHTML = "";
+        jgh = false;
+      }
     }
 </script>
 </body>
