--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@ border-radius:30px;
 <button>
 <a href="v001.html">0.0.1</a>
 </button>
+  <p>Версия 0.0.2</p>
+<button>
+  <a href="v002.html">0.0.2</a>
+  </button>
 </body>
 </html>
