--- a/v002.html
+++ b/v002.html
@@ -125,7 +125,7 @@ body.style.color = colorText;
 screenData = screenData + "<br>off - выключение компьютера, cs - очистка экрана, ver - посмотреть версию, help - посмотреть все команды, fm - посмотреть все файлы, color (цвет) - поменять цвет и color help для помощи для color.<br>";
 }
 else if(d == "off"){
-b, c, d, e, screenData + chat = " ";
+b, c, d, e, screenData = " ";
 a.innerHTML = "Перезагрузите страницу для включения компьютера";
 a = " ";
 }
