--- a/v002.html
+++ b/v002.html
@@ -87,7 +87,8 @@ a.innerHTML = "";
 setTimeout(workA, 1000);
 }
 function workA(){
-  chat = "<br><br>Чат<br>";
+  chat = "<br><br><p id=\"chatA\">Чат<br></p>";
+  chatB = document.getElementById("chatA");
   jl = "<button onclick=\"jlgOpen()\"><p id=\"jlg\"></p>"
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
   a.innerHTML = e + chat;
@@ -101,7 +102,7 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
-  chat.style.color = colorText;
+  chatB.style.color = colorText;
 d = b.value;
 updateCommandValue();
 }
@@ -121,7 +122,7 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
-  chat.style.color = colorText;
+  chatB.style.color = colorText;
 screenData = screenData + "<br>off - выключение компьютера, cs - очистка экрана, ver - посмотреть версию, help - посмотреть все команды, fm - посмотреть все файлы, color (цвет) - поменять цвет и color help для помощи для color.<br>";
 }
 else if(d == "off"){
@@ -143,6 +144,7 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
+  chatB.style.color = colorText;
   screenData = screenData + "<br>0.0.1<br>";
 }
 else if(d == "fm"){
@@ -156,6 +158,7 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
+  chatB.style.color = colorText;
   screenData = screenData + "<br>Папки:<br>ASSEMBLY<br>system<br><br>Используйте fm (папка) чтобы посмотреть внутрь папки<br>";
 }
 else if(d == "fm ASSEMBLY"){
@@ -182,6 +185,7 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
+  chatB.style.color = colorText;
   screenData = screenData + "<br>system:<br>launch.excf<br>boot.excf<br>command.cmd<br>saveScreenData.excf<br>system.asm<br>";
 }
 else if(d == "color help"){
@@ -195,6 +199,7 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
+  chatB.style.color = colorText;
   screenData = screenData + "<br>default - как обычно, 0 - зеленый, 1 - черный, 2 - белый, 3 - лаймовый. Укажите color (цвет фона)(цвет текста), например color 10 для зеленого текста на черном фоне<br>";
 }
 else if(d == "color default"){
@@ -294,6 +299,7 @@ c.style.background = colorBackground;
 c.style.color = colorText;
 body.style.background = colorBackground;
 body.style.color = colorText;
+  chatB.style.color = colorText;
   screenData = screenData + "<br>Извините, была указана неверная команда или неверный атрибут<br>";
 }
 updateCommandValue();
@@ -316,6 +322,7 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
+      chatB.style.color = colorText;
     }
     function jlgOpen(){
       jhg = document.getElementById("jlg");
