--- a/v002.html
+++ b/v002.html
@@ -87,7 +87,7 @@ a.innerHTML = "";
 setTimeout(workA, 1000);
 }
 function workA(){
-  chat = "<br><br><p id=\"chatA\">Чат<br></p>";
+  chat = "<br><br><p id=\"chatA\">Чат<br>admin: Проверка<br>admin: Воу, работает<br></p>";
   chatB = document.getElementById("chatA");
   jl = "<button onclick=\"jlgOpen()\"><p id=\"jlg\"></p>"
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
