--- a/v003.html
+++ b/v003.html
@@ -44,7 +44,7 @@ setTimeout(launchE, 5000);
 function launchE(){
 a.innerHTML = screenData + "<br>\! \@ \# \$ \% \^ \& \* \( \) \+ \" \№ \; \: \? \, \/ \- \{ \} \| \. \< \>";
   jfg()
-setTimeout(launchFJ, 5000);
+setTimeout(launchJ, 5000);
 }
 function launchJ(){
 a.innerHTML = screenData + "<br>1 2 3 4 5 6 7 8 9 0<br>Letter and number test finished";
