--- a/v003.html
+++ b/v003.html
@@ -80,7 +80,6 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
-  chatB.style.color = colorText;
 d = b.value;
 updateCommandValue();
 }
@@ -91,7 +90,7 @@ function workB(){
 updateCommandValue();
 if(d == "help"){
   e = "Комманда:<textarea id=\"txtcmnd\"></textarea><button id=\"run\" onclick=\"workC()\">Ввести</button>";
-a.innerHTML = screenData + "<br>off - выключение компьютера, cs - очистка экрана, ver - посмотреть версию, help - посмотреть все команды, fm - посмотреть все файлы, color (цвет) - поменять цвет и color help для помощи для color.<br>" + e + jlg;
+a.innerHTML = screenData + "<br>off - выключение компьютера, cs - очистка экрана, ver - посмотреть версию, help - посмотреть все команды, fm - посмотреть все файлы, color (цвет) - поменять цвет и color help для помощи для color, regInfo - как зарегистрироваться.<br>" + e + jlg;
 b = document.getElementById("txtcmnd")
 c = document.getElementById("run")
 b.style.background = colorBackground;
@@ -100,8 +99,7 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
-  chatB.style.color = colorText;
-screenData = screenData + "<br>off - выключение компьютера, cs - очистка экрана, ver - посмотреть версию, help - посмотреть все команды, fm - посмотреть все файлы, color (цвет) - поменять цвет и color help для помощи для color.<br>";
+screenData = screenData + "<br>off - выключение компьютера, cs - очистка экрана, ver - посмотреть версию, help - посмотреть все команды, fm - посмотреть все файлы, color (цвет) - поменять цвет и color help для помощи для color, regInfo - как зарегистрироваться.<br>";
 }
 else if(d == "off"){
 b, c, d, e, screenData = " ";
@@ -122,7 +120,6 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
-  chatB.style.color = colorText;
   screenData = screenData + "<br>0.0.3<br>";
 }
 else if(d == "color help"){
@@ -136,7 +133,6 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
-  chatB.style.color = colorText;
   screenData = screenData + "<br>default - как обычно, 0 - зеленый, 1 - черный, 2 - белый, 3 - лаймовый. Укажите color (цвет фона)(цвет текста), например color 10 для зеленого текста на черном фоне<br>";
 }
 else if(d == "color default"){
@@ -238,7 +234,6 @@ c.style.background = colorBackground;
 c.style.color = colorText;
 body.style.background = colorBackground;
 body.style.color = colorText;
-  chatB.style.color = colorText;
   screenData = screenData + "<br>Извините, была указана неверная команда или неверный атрибут<br>";
 }
 updateCommandValue();
@@ -261,7 +256,6 @@ c.style.background = colorBackground;
 c.style.color = colorText;
   body.style.background = colorBackground;
 body.style.color = colorText;
-      chatB.style.color = colorText;
     }
     function jlgOpen(){
       if(jgh == false){
