--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@ border-radius:30px;
 <button>
   <a href="v002.html">0.0.2</a>
   </button>
+  <p>Версия 0.0.3</p>
+  <button>
+    <a href="v003.html">0.0.3</a>
+  </button>
 </body>
 </html>
