--- a/v003.html
+++ b/v003.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-body {
-background: black;
-color: green;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="mainStyle.css" >
 <title>IltiOS 0.0.3</title>
 </head>
 <body>
